Bijayini | #2100 | Update button alignment issue

--- a/ui/app/styles/bahmni-components/_header.scss
+++ b/ui/app/styles/bahmni-components/_header.scss
@@ -52,7 +52,7 @@
 }
 
 .offlin-sync-wrap .offline-sync {
-    margin:5px 0 0 0;
+    margin:5px 10px 0 0;
 }
 
 .offlin-sync-wrapper .offline-sync {
