--- a/ui/app/styles/registration/_registration.scss
+++ b/ui/app/styles/registration/_registration.scss
@@ -193,4 +193,7 @@ body{
 .comment-toggle {
   margin-top:4px;
 }
+.split-button {
+  margin: 2px 0;
+}
 
